[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/World/preview-free-for-use.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/parallax-forest-middle-trees.png" type="Texture" id=3]
[ext_resource path="res://Scenes/parallax-forest-back-trees.png" type="Texture" id=4]
[ext_resource path="res://Scenes/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/LifeFlask.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Ð¡haracteristics.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Player/Add.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sound/mixkit-wind-in-the-forest-1237.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound/mixkit-birds-in-the-forest-1240.wav" type="AudioStream" id=11]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 32, 0, 32, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 32, 0, 32, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 32, 0, 32, 0, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 128, 48, 0, 48, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 128, 0, 128, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 128, 0, 128, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 16, 0, 16, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 32, 48, 0, 48, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=1]
0/name = "preview-free-for-use.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 16, 16, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "preview-free-for-use.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 16, 16, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "preview-free-for-use.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 80, 16, 16, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "preview-free-for-use.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 64, 128, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 5 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = true
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "preview-free-for-use.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 48, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 8 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "preview-free-for-use.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 48, 0, 32, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 9 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "preview-free-for-use.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 48, 0, 32, 48 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 10 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.560784, 0.109804, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.329412, 0.309804, 0.309804, 1 )
border_color = Color( 0.290196, 0.286275, 0.286275, 1 )

[sub_resource type="Theme" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.894118, 0.14902, 0.113725, 0.603922 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.329412, 0.309804, 0.309804, 1 )

[sub_resource type="Theme" id=20]

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.160784, 0.227451, 0.952941, 0.6 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.329412, 0.309804, 0.309804, 1 )

[sub_resource type="Theme" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.780392, 0.678431, 0.333333, 0.682353 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.329412, 0.309804, 0.309804, 1 )

[sub_resource type="Theme" id=19]

[node name="World" type="Node2D"]
position = Vector2( 0, -3 )
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 1 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( -196621, 3, 0, -196620, 3, 0, -261621, 3, 0, -261620, 3, 0, -131086, 3, 0, -131084, 3, 0, -196085, 3, 0, -196084, 3, 0, -65550, 3, 0, -65549, 3, 0, -65548, 3, 0, -65547, 3, 0, -130549, 3, 0, -130548, 3, 0, 65511, 0, 0, 65512, 1, 0, 65513, 1, 0, 65514, 1, 0, 65515, 1, 0, 65516, 1, 0, 65517, 1, 0, 65518, 1, 0, 65519, 1, 0, 65520, 1, 0, 65521, 1, 0, 65522, 1, 0, 65523, 1, 0, 65524, 1, 0, 65525, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 67, 1, 0, 68, 1, 0, 69, 1, 0, 70, 1, 0, 71, 1, 0, 72, 1, 0, 73, 1, 0, 74, 1, 0, 75, 1, 0, 76, 1, 0, 77, 1, 0, 78, 1, 0, 79, 1, 0, 80, 1, 0, 81, 1, 0, 82, 1, 0, 83, 1, 0, 84, 1, 0, 85, 1, 0, 86, 1, 0, 87, 1, 0, 88, 1, 0, 89, 1, 0, 90, 1, 0, 91, 1, 0, 92, 1, 0, 93, 1, 0, 94, 1, 0, 95, 1, 0, 96, 1, 0, 97, 1, 0, 98, 1, 0, 99, 1, 0, 100, 1, 0, 101, 1, 0, 102, 1, 0, 103, 1, 0, 104, 1, 0, 105, 1, 0, 106, 1, 0, 107, 1, 0, 108, 1, 0, 109, 1, 0, 110, 1, 0, 111, 1, 0, 112, 1, 0, 113, 1, 0, 114, 1, 0, 115, 1, 0, 116, 1, 0, 117, 1, 0, 118, 1, 0, 119, 1, 0, 120, 1, 0, 121, 1, 0, 122, 1, 0, 123, 1, 0, 124, 1, 0, 125, 1, 0, 126, 1, 0, 127, 1, 0, 128, 1, 0, 129, 1, 0, 130, 1, 0, 131, 1, 0, 132, 1, 0, 133, 1, 0, 134, 1, 0, 135, 1, 0, 136, 1, 0, 137, 1, 0, 138, 1, 0, 139, 1, 0, 140, 1, 0, 141, 1, 0, 142, 1, 0, 143, 1, 0, 144, 1, 0, 145, 1, 0, 146, 1, 0, 147, 1, 0, 148, 1, 0, 149, 1, 0, 150, 1, 0, 151, 1, 0, 152, 1, 0, 153, 1, 0, 154, 1, 0, 155, 1, 0, 156, 1, 0, 157, 1, 0, 158, 1, 0, 159, 1, 0, 160, 1, 0, 161, 1, 0, 162, 1, 0, 163, 1, 0, 164, 1, 0, 165, 1, 0, 166, 1, 0, 167, 1, 0, 168, 1, 0, 169, 1, 0, 170, 1, 0, 171, 1, 0, 172, 1, 0, 173, 1, 0, 174, 1, 0, 175, 1, 0, 176, 1, 0, 177, 1, 0, 178, 1, 0, 179, 1, 0, 180, 1, 0, 181, 1, 0, 182, 1, 0, 183, 1, 0, 184, 1, 0, 185, 1, 0, 186, 1, 0, 187, 1, 0, 188, 1, 0, 189, 1, 0, 190, 1, 0, 191, 1, 0, 192, 1, 0, 193, 1, 0, 194, 1, 0, 195, 1, 0, 196, 1, 0, 197, 1, 0, 198, 1, 0, 199, 1, 0, 200, 1, 0, 201, 1, 0, 202, 1, 0, 203, 1, 0, 204, 1, 0, 205, 1, 0, 206, 1, 0, 207, 1, 0, 208, 1, 0, 209, 1, 0, 210, 1, 0, 211, 1, 0, 212, 1, 0, 213, 1, 0, 214, 1, 0, 215, 1, 0, 216, 1, 0, 217, 1, 0, 218, 1, 0, 219, 1, 0, 220, 1, 0, 221, 1, 0, 222, 1, 0, 223, 1, 0, 224, 1, 0, 225, 1, 0, 226, 1, 0, 227, 1, 0, 228, 1, 0, 229, 1, 0, 230, 1, 0, 231, 1, 0, 232, 1, 0, 233, 1, 0, 234, 1, 0, 235, 1, 0, 236, 1, 0, 237, 1, 0, 238, 1, 0, 239, 1, 0, 240, 1, 0, 241, 1, 0, 242, 1, 0, 243, 1, 0, 244, 1, 0, 245, 1, 0, 246, 1, 0, 247, 1, 0, 248, 1, 0, 249, 1, 0, 250, 1, 0, 251, 1, 0, 252, 1, 0, 253, 1, 0, 254, 1, 0, 255, 1, 0, 256, 1, 0, 257, 1, 0, 258, 1, 0, 259, 1, 0, 260, 1, 0, 261, 1, 0, 262, 1, 0, 263, 1, 0, 264, 1, 0, 265, 1, 0, 266, 1, 0, 267, 1, 0, 268, 1, 0, 269, 1, 0, 270, 1, 0, 271, 1, 0, 272, 1, 0, 273, 1, 0, 274, 1, 0, 275, 1, 0, 276, 1, 0, 277, 1, 0, 278, 1, 0, 279, 1, 0, 280, 1, 0, 281, 1, 0, 282, 1, 0, 283, 1, 0, 284, 1, 0, 285, 1, 0, 286, 1, 0, 287, 1, 0, 288, 1, 0, 289, 1, 0, 290, 1, 0, 291, 1, 0, 292, 1, 0, 293, 1, 0, 294, 1, 0, 295, 1, 0, 296, 1, 0, 297, 1, 0, 298, 1, 0, 299, 1, 0, 300, 1, 0, 301, 1, 0, 302, 1, 0, 303, 1, 0, 304, 1, 0, 305, 1, 0, 306, 1, 0, 307, 1, 0, 308, 1, 0, 309, 1, 0, 310, 1, 0, 311, 1, 0, 312, 1, 0, 313, 1, 0, 314, 1, 0, 315, 1, 0, 316, 1, 0, 317, 1, 0, 318, 1, 0, 319, 1, 0, 320, 1, 0, 321, 1, 0, 322, 1, 0, 323, 1, 0, 324, 1, 0, 325, 1, 0, 326, 1, 0, 327, 1, 0, 328, 1, 0, 329, 1, 0, 330, 1, 0, 331, 1, 0, 332, 1, 0, 333, 1, 0, 334, 1, 0, 335, 1, 0, 336, 1, 0, 337, 1, 0, 338, 1, 0, 339, 1, 0, 340, 1, 0, 341, 1, 0, 342, 1, 0, 343, 1, 0, 344, 1, 0, 345, 1, 0, 346, 1, 0, 347, 1, 0, 348, 1, 0, 349, 1, 0, 350, 1, 0, 351, 1, 0, 352, 1, 0, 353, 1, 0, 354, 1, 0, 355, 1, 0, 356, 1, 0, 357, 1, 0, 358, 1, 0, 359, 1, 0, 360, 1, 0, 361, 1, 0, 362, 1, 0, 363, 1, 0, 364, 1, 0, 365, 1, 0, 366, 1, 0, 367, 1, 0, 368, 1, 0, 369, 1, 0, 370, 1, 0, 371, 1, 0, 372, 1, 0, 373, 1, 0, 374, 1, 0, 375, 1, 0, 376, 1, 0, 377, 1, 0, 378, 1, 0, 379, 1, 0, 380, 1, 0, 381, 1, 0, 382, 1, 0, 383, 1, 0, 384, 1, 0, 385, 1, 0, 386, 1, 0, 387, 1, 0, 388, 1, 0, 389, 1, 0, 390, 1, 0, 391, 1, 0, 392, 1, 0, 393, 1, 0, 394, 1, 0, 395, 1, 0, 396, 1, 0, 397, 1, 0, 398, 1, 0, 399, 1, 0, 400, 1, 0, 401, 1, 0, 402, 1, 0, 403, 1, 0, 404, 1, 0, 405, 1, 0, 406, 1, 0, 407, 1, 0, 408, 1, 0, 409, 1, 0, 410, 1, 0, 411, 1, 0, 412, 1, 0, 413, 1, 0, 414, 1, 0, 415, 1, 0, 416, 1, 0, 417, 1, 0, 418, 1, 0, 419, 1, 0, 420, 1, 0, 421, 1, 0, 422, 1, 0, 423, 1, 0, 424, 1, 0, 425, 1, 0, 426, 1, 0, 427, 1, 0, 428, 1, 0, 429, 1, 0, 430, 1, 0, 431, 1, 0, 432, 1, 0, 433, 1, 0, 434, 1, 0, 435, 1, 0, 436, 1, 0, 437, 1, 0, 438, 1, 0, 439, 1, 0, 440, 1, 0, 441, 1, 0, 442, 1, 0, 443, 1, 0, 444, 1, 0, 445, 1, 0, 446, 1, 0, 447, 1, 0, 448, 1, 0, 449, 1, 0, 450, 1, 0, 451, 1, 0, 452, 1, 0, 453, 1, 0, 454, 1, 0, 455, 1, 0, 456, 1, 0, 457, 1, 0, 458, 1, 0, 459, 1, 0, 460, 1, 0, 461, 1, 0, 462, 1, 0, 463, 1, 0, 464, 1, 0, 465, 1, 0, 466, 1, 0, 467, 1, 0, 468, 1, 0, 469, 1, 0, 470, 1, 0, 471, 1, 0, 472, 1, 0, 473, 1, 0, 474, 1, 0, 475, 1, 0, 476, 1, 0, 477, 1, 0, 478, 1, 0, 479, 1, 0, 480, 1, 0, 481, 1, 0, 482, 1, 0, 483, 1, 0, 484, 1, 0, 485, 1, 0, 486, 1, 0, 487, 1, 0, 488, 1, 0, 489, 1, 0, 490, 1, 0, 491, 1, 0, 492, 1, 0, 493, 1, 0, 494, 1, 0, 495, 1, 0, 496, 1, 0, 497, 1, 0, 498, 1, 0, 499, 1, 0, 500, 1, 0, 501, 1, 0, 502, 1, 0, 503, 1, 0, 504, 1, 0, 505, 1, 0, 506, 1, 0, 507, 1, 0, 508, 1, 0, 509, 1, 0, 510, 1, 0, 511, 1, 0, 512, 1, 0, 513, 1, 0, 514, 1, 0, 515, 1, 0, 516, 1, 0, 517, 1, 0, 518, 1, 0, 519, 1, 0, 520, 1, 0, 521, 1, 0, 522, 1, 0, 523, 1, 0, 524, 1, 0, 525, 1, 0, 526, 1, 0, 527, 1, 0, 528, 1, 0, 529, 1, 0, 530, 1, 0, 531, 1, 0, 532, 1, 0, 533, 1, 0, 534, 1, 0, 535, 1, 0, 536, 1, 0, 537, 1, 0, 538, 1, 0, 539, 1, 0, 540, 1, 0, 541, 1, 0, 542, 1, 0, 543, 1, 0, 544, 2, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -16 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -100 )
scale = Vector2( 1, 0.5 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="Enemy" type="ProgressBar" parent="Player/Camera2D"]
margin_left = -71.0
margin_top = -286.0
margin_right = 73.0
margin_bottom = -272.0
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="ProgressBar" parent="Player/Camera2D"]
show_behind_parent = true
light_mask = 511
margin_left = -79.0
margin_top = 268.0
margin_right = 80.0
margin_bottom = 278.0
theme = SubResource( 13 )
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 15 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMana" type="ProgressBar" parent="Player/Camera2D"]
margin_left = -79.0
margin_top = 278.0
margin_right = 80.0
margin_bottom = 288.0
theme = SubResource( 20 )
custom_styles/fg = SubResource( 21 )
custom_styles/bg = SubResource( 22 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="ProgressBar" parent="Player/Camera2D"]
show_behind_parent = true
light_mask = 1023
margin_left = -79.0
margin_top = 288.0
margin_right = 80.0
margin_bottom = 298.0
theme = SubResource( 16 )
custom_styles/fg = SubResource( 17 )
custom_styles/bg = SubResource( 18 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUP" type="Button" parent="Player/Camera2D"]
visible = false
margin_left = -197.0
margin_top = 274.0
margin_right = -177.0
margin_bottom = 294.0
rect_scale = Vector2( 0.481495, 0.907728 )
theme = SubResource( 19 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player/Camera2D"]
margin_left = -27.0
margin_top = 98.0
margin_right = 98.0
margin_bottom = 112.0
rect_scale = Vector2( 0.48, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp_label" type="Label" parent="Player/Camera2D"]
margin_left = -79.0
margin_top = 268.0
margin_right = -39.0
margin_bottom = 282.0
rect_scale = Vector2( 0.4, 0.76 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mp_label" type="Label" parent="Player/Camera2D"]
margin_left = -79.0
margin_top = 278.0
margin_right = -39.0
margin_bottom = 292.0
rect_scale = Vector2( 0.4, 0.76 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exp_label" type="Label" parent="Player/Camera2D"]
margin_left = -79.0
margin_top = 288.0
margin_right = -39.0
margin_bottom = 302.0
rect_scale = Vector2( 0.4, 0.76 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_label" type="Label" parent="Player/Camera2D"]
margin_left = -7.0
margin_top = -284.0
margin_right = 33.0
margin_bottom = -270.0
rect_scale = Vector2( 0.4, 0.76 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeFlask" parent="Player/Camera2D" instance=ExtResource( 7 )]
position = Vector2( -108, 284 )
scale = Vector2( 0.75, 1.5 )

[node name="Label" type="Label" parent="Player/Camera2D/LifeFlask"]
margin_left = 6.66667
margin_top = 4.0
margin_right = 46.6667
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tank" type="Label" parent="Player/Camera2D/LifeFlask"]
margin_left = -9.4
margin_right = 30.6
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ð¡haracteristics" parent="Player/Camera2D" instance=ExtResource( 8 )]
visible = false
position = Vector2( -102, -70 )
scale = Vector2( 0.5, 1 )

[node name="LevelUPCharButton" type="TextureButton" parent="Player/Camera2D"]
margin_left = -144.0
margin_top = 268.0
margin_right = -104.0
margin_bottom = 308.0
rect_scale = Vector2( 0.4, 0.761221 )
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Player/Camera2D/LevelUPCharButton"]
margin_left = 32.5
margin_top = 28.9009
margin_right = 72.5
margin_bottom = 42.9009
text = "C"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 0, -390 )
transform = Transform2D( 1, 0, 0, 1, 0, -390 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0 )
motion_mirroring = Vector2( 544, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 544, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_filter_clip = true

[node name="Portal" parent="." instance=ExtResource( 6 )]
position = Vector2( 8347, 2 )
scale = Vector2( 0.4, 0.4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 0.874
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[connection signal="pressed" from="Player/Camera2D/LevelUPCharButton" to="Player" method="_on_LevelUpButton_pressed"]
